--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,11 +6,11 @@
 #    By: fjanoty <fjanoty@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2014/09/13 19:48:58 by fjanoty           #+#    #+#              #
-#    Updated: 2016/12/14 02:19:36 by fjanoty          ###   ########.fr        #
+#    Updated: 2016/12/14 02:37:35 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-DEPS = ../includes/libft/.h
+DEPS = ../includes/libft.h
 NAME	= libft.a
 SRC		= ft_atoi.c \
 		  ft_bzero.c \
@@ -82,15 +82,12 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	ar rc $(NAME) $(OBJ)
-	ranlib $(NAME)
+	ranlib $(NAME) 
 
 %.o:%.c $(DEPS)
-	    $(CC) $(CFLAGS) -I ../includes/ -c $(SRC)
+	    $(CC) $(CFLAGS) -c $< -I ../includes/
 
 clean:
 	rm -f $(OBJ)
 
-fclean: clean
-	rm -f $(NAME)
-
-re: fclean all
+re: clean all
