avencement de la restructuration de l psrtie opencl

--- a/sources/Makefile
+++ b/sources/Makefile
@@ -6,7 +6,7 @@
 #    By: fjanoty <fjanoty@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 01:32:20 by fjanoty           #+#    #+#              #
-#    Updated: 2016/12/14 07:04:03 by fjanoty          ###   ########.fr        #
+#    Updated: 2016/12/14 09:00:44 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,6 +15,9 @@
 DEPS = ../includes/rtv1.h
 
 SRC		= 	main.c \
+			init_rtv1.c \
+			init_win.c \
+			init_opencl.c \
 			exit.c 
 
 OBJ		= $(SRC:.c=.o)
