--- a/sources/Makefile
+++ b/sources/Makefile
@@ -6,7 +6,7 @@
 #    By: fjanoty <fjanoty@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 01:32:20 by fjanoty           #+#    #+#              #
-#    Updated: 2016/12/17 19:08:34 by fjanoty          ###   ########.fr        #
+#    Updated: 2016/12/19 01:26:44 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,7 @@ SRC		= 	main.c			\
 			event.c 		\
 			hook.c			\
 			math_vector.c	\
+			error_opencl.c	\
 			exit.c 
 
 OBJ		= $(SRC:.c=.o)
@@ -30,14 +31,15 @@ all: $(NAME)
 $(NAME): $(OBJ)
 		$(CC) $(CFLAGS)  -o ../$(NAME) $(OBJ) -L ../libft/ -lft \
 		-L ../c_maths -lc_maths \
-		-lmlx -framework OpenGL -framework AppKit -framework opencl 
+		-L ../minilibx_macos -lmlx \
+		-framework OpenGL -framework AppKit -framework opencl 
 
 #		-L /usr/lib/ -lmlx -lm -lX11 -lXext
 
 
 
 %.o: %.c $(DEPS)
-	$(CC) $(CFLAGS) -o $@ -c $< -I ../includes
+	$(CC) $(CFLAGS) -o $@ -c $< -I ../includes -I ../minilibx_macos
 
 clean:
 	rm -f $(OBJ)
