--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@
 #    By: nperrin <nperrin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 01:32:20 by fjanoty           #+#    #+#              #
-#    Updated: 2017/09/26 21:29:33 by fjanoty          ###   ########.fr        #
+#    Updated: 2017/09/27 17:28:58 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,7 @@ SRC		= 								\
 			event.c						\
 			exit.c						\
 			init.c						\
+			item.c						\
 			main.c						\
 			mlx_win.c					\
 			object.c					\
