--- a/minilibx_macos/Makefile
+++ b/minilibx_macos/Makefile
@@ -7,7 +7,7 @@ OBJ1=$(SRC:.c=.o)
 OBJ=$(OBJ1:.m=.o)
 #CFLAGS+=-O2
 
-//export CFLAGS	= -g -fsanitize=address # -Wall -Wextra -Werror
+export CFLAGS	= -O2 #-g -fsanitize=address # -Wall -Wextra -Werror
 
 all: $(NOM)
 
