--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@
 #    By: nperrin <nperrin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 01:32:20 by fjanoty           #+#    #+#              #
-#    Updated: 2017/10/11 10:26:59 by fjanoty          ###   ########.fr        #
+#    Updated: 2017/10/26 15:45:01 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,6 +24,7 @@ SRC		= 						\
 			main.c				\
 			mlx_win.c			\
 			parse_rtv1.c		\
+			ray.c				\
 			get_file.c			\
 			test.c				\
 			test_parsing.c		\
