put every thing to the norme

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,7 +6,7 @@
 #    By: nperrin <nperrin@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2015/01/05 01:32:20 by fjanoty           #+#    #+#              #
-#    Updated: 2017/11/04 14:10:51 by fjanoty          ###   ########.fr        #
+#    Updated: 2017/11/08 06:48:49 by fjanoty          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,21 +16,41 @@
 NAME	=	../rtv1
 DEPS =  ../inc/rtv1.h
 
-SRC		= 						\
-			cam.c				\
-			event.c				\
-			exit.c				\
-			item.c				\
-			lst.c				\
-			main.c				\
-			mlx_win.c			\
-			parse_rtv1.c		\
-			post_processing.c	\
-			ray.c				\
-			ray_condition.c		\
-			get_file.c			\
-			segment.c			\
-			object.c			\
+SRC		= 							\
+			cam.c					\
+			cam_move.c				\
+			cam_turn.c				\
+			event.c					\
+			event_not_use_yet.c		\
+			exit.c					\
+			get_file.c				\
+			item.c					\
+			lst.c					\
+			lst_map.c				\
+			lst_remove_node.c		\
+			main.c					\
+			mlx_win.c				\
+			object.c				\
+			object_dist.c			\
+			object_dist_all.c		\
+			object_normale.c		\
+			parse_asset.c			\
+			parse_cam.c				\
+			parse_entities_lst.c	\
+			parse_is_function.c		\
+			parse_item_fill.c		\
+			parse_key_word.c		\
+			parse_light.c			\
+			parse_rtv1.c			\
+			parse_str_get.c			\
+			parse_str_move.c		\
+			post_processing.c		\
+			post_porcessing_draw.c	\
+			ray.c					\
+			ray_color.c				\
+			ray_geo.c				\
+			ray_condition.c			\
+			segment.c				\
 
 
 OBJ			= $(SRC:.c=.o)
@@ -45,7 +65,7 @@ FRAMEWORK	= -framework OpenGl -framework AppKit #-framework opencl
 all: $(NAME)
 
 $(NAME): $(OBJ)
-		$(CC) $(CFLAGS) -o $(NAME) $(OBJ) $(LIB_DIR) $(LIB_NAME) $(FRAMEWORK) 
+		$(CC) $(CFLAGS) -o $(NAME) $(LIB_DIR) $(LIB_NAME) $(FRAMEWORK) $(OBJ) 
 #		-L /usr/lib/ -lmlx -lm -lX11 -lXext
 #
 
