--- a/quaternion/Makefile
+++ b/quaternion/Makefile
@@ -29,16 +29,16 @@ OBJ		= $(SRC:.c=.o)
 all : $(NAME)
 
 $(NAME) : $(OBJ)
-	ar rc $(NAME) $(OBJ)
-	ranlib $(NAME)
+	@ar rc $(NAME) $(OBJ)
+	@ranlib $(NAME)
 
 %.o:%.c$(DEPS)
-	$(CC) $(CFLAGS) -c $(SRC) -I .
+	@$(CC) $(CFLAGS) -c $(SRC) -I .
 
 clean:
-	rm -f $(OBJ)
+	@rm -f $(OBJ)
 
 fclean : clean
-	rm -f $(NAME)
+	@rm -f $(NAME)
 
 re: fclean all
